--- a/report.html
+++ b/report.html
@@ -1628,22 +1628,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,22493],[],[[5,0,0,[],[0,367,22124,6],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,390],[],[[5,0,0,[],[0,375,15,6],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*6-Cloud Free Mosaic","*C:\\Users\\skymap\\Desktop\\Robotframework-EOFactory\\6-Cloud_Free_Mosaic.robot","*6-Cloud_Free_Mosaic.robot","*<p>Test Cloud free mosaic tool.\x3c/p>","*CloudFreeMosaic","*Element with locator 'class:Sort by cloud percentage' not found."]);
+window.output["strings"] = window.output["strings"].concat(["*","*1-Join","*C:\\Users\\skymap\\Desktop\\Robotframework-EOFactory\\1-Join.robot","*1-Join.robot","*<p>Test Join tool.\x3c/p>","*JoinTable","*Variable '${table_toolkit_icon}' not found."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:22","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:22","fail":1,"id":"s1","label":"6-Cloud Free Mosaic","name":"6-Cloud Free Mosaic","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:00","fail":1,"id":"s1","label":"1-Join","name":"1-Join","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1646126658757;
+window.output["baseMillis"] = 1646282589269;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 22516;
+window.output["generated"] = 405;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
