--- a/report.html
+++ b/report.html
@@ -1628,22 +1628,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,390],[],[[5,0,0,[],[0,375,15,6],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,23961],[],[[5,0,0,[],[1,363,23598],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*1-Join","*C:\\Users\\skymap\\Desktop\\Robotframework-EOFactory\\1-Join.robot","*1-Join.robot","*<p>Test Join tool.\x3c/p>","*JoinTable","*Variable '${table_toolkit_icon}' not found."]);
+window.output["strings"] = window.output["strings"].concat(["*","*2-TabulateArea","*C:\\Users\\skymap\\Desktop\\Robotframework-EOFactory\\2-TabulateArea.robot","*2-TabulateArea.robot","*<p>Test TabulateArea tool.\x3c/p>","*TabulateAreaTool"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:00","fail":1,"id":"s1","label":"1-Join","name":"1-Join","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:24","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:24","fail":0,"id":"s1","label":"2-TabulateArea","name":"2-TabulateArea","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1646282589269;
+window.output["baseMillis"] = 1646294731216;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 405;
+window.output["generated"] = 23991;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
